--- a/app/src/main/res/layout/content_parent.xml
+++ b/app/src/main/res/layout/content_parent.xml
@@ -10,23 +10,18 @@
     android:layout_gravity="center"
     tools:showIn="@layout/app_bar_parent">
 
-    <Button
-        android:background="@color/agora_blue"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:text="Celeb Go Live"
-        android:id="@+id/btnGoLive"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
 
-    <Button
-        android:background="@color/agora_blue"
-        android:text="Fan View Live"
-        android:id="@+id/btnFanViewLive"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/btnGoLive"
-        android:layout_alignRight="@+id/btnGoLive"
-        android:layout_alignEnd="@+id/btnGoLive"
-        android:layout_marginTop="57dp" />
+
+    <View
+        android:id="@+id/view"
+        android:layout_width="match_parent"
+        android:layout_height="56dp"/>
+
+    <ListView
+        android:layout_below="@+id/view"
+        android:id="@+id/list_of_celeb"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </ListView>
+
 </RelativeLayout>
